[gd_scene load_steps=21 format=2]

[ext_resource path="res://MainNavigation/Worldmap/BattleButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://Database/Encounters/ElarDesert/enc_ionWanderer.tres" type="Resource" id=2]
[ext_resource path="res://SPRITES/Backgrounds/worldmap.png" type="Texture" id=3]
[ext_resource path="res://SPRITES/UI/ButtonLong1Hover.png" type="Texture" id=4]
[ext_resource path="res://SPRITES/UI/ButtonLong1.png" type="Texture" id=5]
[ext_resource path="res://MainNavigation/Worldmap/UIMap.tscn" type="PackedScene" id=6]
[ext_resource path="res://Regions/StartingZone.gd" type="Script" id=7]
[ext_resource path="res://SPRITES/UI/SlotHoverl1.png" type="Texture" id=8]
[ext_resource path="res://SPRITES/UI/SlotNormal1.png" type="Texture" id=9]
[ext_resource path="res://Fonts/Cinzel-Regular.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://Database/Encounters/ElarDesert/enc_silverShory.tres" type="Resource" id=11]
[ext_resource path="res://Database/Encounters/ElarDesert/enc_crimsonDefender.tres" type="Resource" id=12]
[ext_resource path="res://Database/Encounters/ElarDesert/enc_emeraldElar.tres" type="Resource" id=13]
[ext_resource path="res://MainNavigation/Worldmap/RecruitButton.tscn" type="PackedScene" id=14]
[ext_resource path="res://Database/Recruitments/test.tres" type="Resource" id=15]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 10 )

[node name="ElarDesert" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="Sprite" parent="."]
position = Vector2( 846.967, 713 )
scale = Vector2( 1.76876, 1.76876 )
z_index = -4096
texture = ExtResource( 3 )

[node name="UIMap" parent="." instance=ExtResource( 6 )]

[node name="WorldMapButton" type="TextureButton" parent="UIMap"]
margin_left = 1050.0
margin_top = 327.0
margin_right = 1250.0
margin_bottom = 450.0
texture_normal = ExtResource( 9 )
texture_hover = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UIMap/WorldMapButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
text = "World map"
align = 1
valign = 1

[node name="EncounterScreen" type="ColorRect" parent="UIMap"]
visible = false
margin_left = 78.0
margin_top = 16.0
margin_right = 1023.0
margin_bottom = 680.0
color = Color( 0.145098, 0.14902, 0.12549, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameLabel" type="Label" parent="UIMap/EncounterScreen"]
margin_right = 945.0
margin_bottom = 94.0
custom_fonts/font = SubResource( 2 )
text = "NAME"
align = 1
valign = 1

[node name="StartButton" type="TextureButton" parent="UIMap/EncounterScreen"]
visible = false
margin_left = 30.0
margin_top = 536.0
margin_right = 926.0
margin_bottom = 646.0
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UIMap/EncounterScreen/StartButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 3 )
text = "START"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EndButton" type="TextureButton" parent="UIMap/EncounterScreen"]
visible = false
self_modulate = Color( 1, 0.529412, 0.529412, 1 )
margin_left = 30.0
margin_top = 536.0
margin_right = 926.0
margin_bottom = 646.0
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UIMap/EncounterScreen/EndButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 3 )
text = "END LOCK"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseButton" type="TextureButton" parent="UIMap/EncounterScreen"]
margin_left = 907.126
margin_top = -3.716
margin_right = 978.126
margin_bottom = 67.284
texture_normal = ExtResource( 9 )
texture_hover = ExtResource( 8 )
expand = true

[node name="Label" type="Label" parent="UIMap/EncounterScreen/CloseButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 4 )
text = "X"
align = 1
valign = 1

[node name="DifficultyLabel" type="Label" parent="UIMap/EncounterScreen"]
margin_top = 94.0
margin_right = 945.0
margin_bottom = 134.0
custom_fonts/font = SubResource( 5 )
text = "Difficulty : 1"
align = 1
valign = 1

[node name="SilverShory" parent="." instance=ExtResource( 1 )]
margin_left = 200.161
margin_top = 445.0
margin_right = 335.161
margin_bottom = 574.0
encounter = ExtResource( 11 )

[node name="IonWanderer" parent="." instance=ExtResource( 1 )]
margin_left = 488.193
margin_top = 536.039
margin_right = 623.193
margin_bottom = 665.039
encounter = ExtResource( 2 )

[node name="EmeraldElar" parent="." instance=ExtResource( 1 )]
margin_left = 631.074
margin_top = 407.039
margin_right = 766.074
margin_bottom = 536.039
encounter = ExtResource( 13 )

[node name="CrimsonDefender" parent="." instance=ExtResource( 1 )]
margin_left = 802.074
margin_top = 354.039
margin_right = 937.074
margin_bottom = 483.039
encounter = ExtResource( 12 )

[node name="GrunkRecruit" parent="." instance=ExtResource( 14 )]
margin_left = 335.161
margin_top = 552.0
margin_right = 470.161
margin_bottom = 676.0
recruitment = ExtResource( 15 )

[connection signal="pressed" from="UIMap/WorldMapButton" to="." method="gotoWorldMap"]
[connection signal="pressed" from="UIMap/EncounterScreen/StartButton" to="." method="gotoEncounter"]
[connection signal="pressed" from="UIMap/EncounterScreen/EndButton" to="." method="endLock"]
[connection signal="pressed" from="UIMap/EncounterScreen/CloseButton" to="." method="closeEncounterScreen"]
